<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/place_card_padding"
    android:background="@drawable/bg_card_rounded_blue"
    android:layout_marginBottom="@dimen/place_card_margin_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvPlaceName"
        android:text="@string/place_card_default_name"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/text_primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvPlaceDistance"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlaceDistance"
        android:text="@string/place_card_default_distance"
        android:textSize="@dimen/text_size_xsmall"
        android:textColor="@color/cardview_border_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvPlaceName" />

    <TextView
        android:id="@+id/tvPlaceAddress"
        android:text="@string/place_card_default_address"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/text_secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/place_card_text_margin_top"
        app:layout_constraintTop_toBottomOf="@id/tvPlaceName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnNavigate"
        android:text="@string/navigate"
        android:backgroundTint="@color/accent_blue"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height_small"
        android:layout_marginTop="@dimen/place_card_button_margin_top"
        app:layout_constraintTop_toBottomOf="@id/tvPlaceAddress"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>