<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Full Map -->
    <com.google.android.gms.maps.MapView
        android:id="@+id/fullMapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Header -->
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/input_background"
        android:padding="@dimen/padding_small"
        android:elevation="@dimen/elevation_large"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_large"
        android:layout_gravity="top"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/icon_size_large"
            android:layout_height="@dimen/icon_size_large"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back_arrow"
            android:scaleType="centerInside"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/nearby_hospitals_medical_stores"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- Bottom List -->
    <LinearLayout
        android:id="@+id/bottomListContainer"
        android:orientation="vertical"
        android:background="@color/gray_light"
        android:padding="@dimen/padding_medium"
        android:elevation="@dimen/elevation_large"
        android:layout_width="match_parent"
        android:layout_height="@dimen/map_bottom_sheet_height"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/tvNearbyTitle"
            android:text="@string/nearby_places"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNearbyPlaces"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</FrameLayout>